--- a/src/app/wallet/wallet.component.scss
+++ b/src/app/wallet/wallet.component.scss
@@ -325,6 +325,10 @@
     transform: scale(0.9);
     transition: 0.2s;
   }
+  @media screen and (max-width: 450px) {
+    width: 130px;
+    font-size: 12px;
+  }
 }
 
 .ethBalance {
